# ub-g12-compvis

./: .gitignore  README.md  pyproject.toml
labs/lab/: Lab1-Channel-Alignment.ipynb  Lab1-bayer interpolation.ipynb  Lab1-intro-opencv.ipynb
labs/lab1/: Lab1-Channel-Alignment.ipynb  Lab1-bayer interpolation.ipynb  Lab1-intro-opencv.ipynb
labs/lab2/: .gitignore  Lab2.ipynb
labs/lab3/: .gitignore  Lab 3.ipynb
labs/lab4/: .gitignore  Lab 4.ipynb
labs/lab5/: Lab5.ipynb
projects/double-double-dominoes/: .gitignore  README.md  pyproject.toml  requirements.txt
projects/double-double-dominoes/code/: README.md  double-double-dominoes.py  evaluate_submission.py  main.ipynb  main.py  pyproject.toml  requirements.txt  training.ipynb
projects/double-double-dominoes/code/domino/: args.py  data.py  errors.py  game.py  model.py  preprocess.py  util.py  vision.py
projects/double-double-dominoes/data/cell/test/: labels.csv
projects/double-double-dominoes/data/cell/train/: labels.csv
projects/double-double-dominoes/data/train/bonus_task/: 01.txt  02.txt  05.txt
projects/double-double-dominoes/data/train/output/regular_task/: 1_03.txt  1_04.txt  1_05.txt  1_06.txt  1_07.txt  1_08.txt  1_09.txt  1_11.txt  1_12.txt  1_13.txt  1_14.txt  1_15.txt  1_16.txt  1_17.txt  1_18.txt  1_19.txt  1_20.txt  2_03.txt  2_04.txt  2_05.txt  2_06.txt  2_07.txt  2_08.txt  2_09.txt  2_10.txt  2_11.txt  2_12.txt  2_13.txt  2_14.txt  2_15.txt  2_17.txt  2_18.txt  2_19.txt  3_03.txt  3_04.txt  3_05.txt  3_06.txt  3_07.txt  3_08.txt  3_09.txt  (+45 more)
projects/double-double-dominoes/data/train/regular_task/: 4_11.txt
projects/double-double-dominoes/data/train/truth/regular_task/: 2_08.txt
projects/double-double-dominoes/data/valid/input/regular_task/: 1_moves.txt
projects/double-double-dominoes/data/valid/output/regular_task/: 1_03.txt  1_04.txt  1_05.txt  1_06.txt  1_07.txt  1_08.txt  1_09.txt  1_10.txt  1_11.txt  1_12.txt  1_13.txt  1_14.txt  1_15.txt  1_17.txt  1_18.txt  1_19.txt  1_20.txt
projects/double-double-dominoes/data/valid/truth/bonus_task/: 02.txt  04.txt
projects/double-double-dominos/: README.md  pyproject.toml
projects/double-double-dominos/data/train/bonus_task/: 03.txt  04.txt  06.txt  07.txt  08.txt  09.txt  10.txt
projects/double-double-dominos/data/valid/output/bonus_task/: 01.txt  03.txt  05.txt
projects/traffic-monitoring/: .gitignore  README.md  ideas.md  main.ipynb  main.py  pyproject.toml  test.ipynb
projects/traffic-monitoring/assets/trackers/: bytetrack.yaml
projects/traffic-monitoring/vistraff/: alg.py  data.py  main.ipynb  model.py  res.py  vision.py
