[tool.poetry]
name = "ub-g12-compvis"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "ub_g12_compvis"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.68"
ipykernel = "^6.21.2"
matplotlib = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
