[tool.poetry]
name = "double-double-dominos"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "double_double_dominos"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.7.0.68"
ipykernel = "^6.21.2"
matplotlib = "^3.7.0"
opencv-contrib-python = "^4.7.0.72"
numpy = "^1.24.2"
autopep8 = "^2.0.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
scikit-image = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
