[tool.poetry]
name = "traffic-monitoring"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "traffic_monitoring"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.2"
ipykernel = "^6.23.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
torch = "1.13.0"
strongsort = "^0.2.1"
yolov5 = "^7.0.12"
ultralytics = "^8.0.113"
pyqt5 = "^5.15.9"
lap = "^0.4.0"
jupyter = "^1.0.0"
ipywidgets = "^8.0.6"
tqdm = "^4.65.0"
iprogress = "^0.4"
kornia = "^0.6.12"
autopep8 = "^2.0.2"
av = "8.1.0"
opencv-python = "4.6.0.66"
nvitop = "^1.1.2"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
