[tool.poetry]
name = "traffic-monitoring"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "traffic_monitoring"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.3"
pandas = "^2.0.2"
ipykernel = "^6.23.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
ipywidgets = "^8.0.6"
tqdm = "^4.65.0"
iprogress = "^0.4"
autopep8 = "^2.0.2"
av = "8.1.0"
nvitop = "^1.1.2"
torch = {version = "^2.0.1+cu118", source = "torch-cuda"}
torchvision = {version = "^0.15.2+cu118", source = "torch-cuda"}
ultralytics = "^8.0.118"
opencv-contrib-python = "^4.7.0.72"
setuptools = "^67.8.0"

[[tool.poetry.source]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
