[tool.poetry]
name = "double-double-dominos"
version = "0.1.0"
description = ""
authors = ["fusedbloxxer <voidwarden@yahoo.com>"]
readme = "README.md"
packages = [{include = "double_double_dominos"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
opencv-python = "^4.7.0.68"
ipykernel = "^6.21.2"
matplotlib = "^3.7.0"
opencv-contrib-python = "^4.7.0.72"
numpy = "^1.24.2"
autopep8 = "^2.0.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
scikit-image = "^0.20.0"
display = "^1.0.0"
pandas = "^2.0.0"
pyqt6 = "^6.5.0"
imblearn = "^0.0"
pytorch-lightning = "^2.0.1.post0"
torchvision = "^0.15.1"
torchmetrics = "^0.11.4"
kornia = "^0.6.12"
lightning = "^2.0.1.post0"
pydantic = "1.8.0"
aiofiles = "^23.1.0"
tensorboard = "^2.12.2"
torch = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
